--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ezmaxinc/eZmax-SDK-php",
+    "name": "ezmaxinc/ezmax-sdk-php",
     "version": "1.0.0",
     "description": "TODO Api description",
     "keywords": [
