--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "ezmaxinc/ezmax-sdk-php",
     "version": "1.0.0",
-    "description": "TODO Api description",
+    "description": "TODO Api description.",
     "keywords": [
         "openapitools",
         "openapi-generator",
