Remove client from namespace

--- a/composer.json
+++ b/composer.json
@@ -31,9 +31,9 @@
         "friendsofphp/php-cs-fixer": "^2.12"
     },
     "autoload": {
-        "psr-4": { "eZmaxAPI\\Client\\" : "lib/" }
+        "psr-4": { "eZmaxAPI\\" : "lib/" }
     },
     "autoload-dev": {
-        "psr-4": { "eZmaxAPI\\Client\\" : "test/" }
+        "psr-4": { "eZmaxAPI\\" : "test/" }
     }
 }
